<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_cadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="quixada.es.ufc.com.trabalhomobile.activity.CadastroActivity"
    tools:showIn="@layout/activity_cadastro">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/label_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/label_cadastro"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nome_problema"
            android:hint="Nome do problema"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/descricao_problema"
            android:hint="Descreva o problema"
            android:layout_marginTop="10dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/radiog">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:text="Tipo:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_tipo"
                    android:layout_weight="1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tipo_eletrico"
                    android:layout_weight="1"
                    android:text="@string/tipo_eletrico" />

                <RadioButton
                    android:text="@string/tipo_encanamento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tipo_encanamento"
                    android:layout_weight="1" />
            </LinearLayout>
        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/button_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_cancelar"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:onClick="onClickCancelar" />

            <Button
                android:text="@string/submit_cadastro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/submit_cadastro"
                android:layout_marginTop="20dp"
                style="@style/Widget.AppCompat.Button"
                android:layout_weight="1"
                android:onClick="onClickCadastrar" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
