<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_registro_conta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="quixada.es.ufc.com.trabalhomobile.activity.RegistroContaActivity"
    tools:showIn="@layout/activity_registro_conta">

    <Button
        android:text="Confirmar"
        android:drawableLeft="@drawable/ic_done_black_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_confirmar"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/conf_senha"
        android:layout_marginBottom="48dp"
        android:layout_alignEnd="@+id/radio_enc"
        android:onClick="onClick" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/senha_registro"
        android:hint="Senha"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/email_registro"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/conf_senha"
        android:hint="Confirmar Senha"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/senha_registro"
        android:layout_alignStart="@+id/senha_registro" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="87dp"
        android:id="@+id/email_registro"
        android:hint="Email"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/senha_registro" />

    <TextView
        android:text="@string/label_tipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="18sp"
        android:layout_marginTop="36dp"
        android:fontFamily="monospace"
        android:layout_below="@+id/conf_senha"
        android:layout_alignStart="@+id/conf_senha" />

    <RadioButton
        android:text="@string/prof_eletricista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radio_enc"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_toEndOf="@+id/radio_ele"
        android:layout_marginStart="21dp" />

    <RadioButton
        android:text="@string/prof_encanador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:id="@+id/radio_ele"
        android:layout_alignBaseline="@+id/radio_enc"
        android:layout_alignBottom="@+id/radio_enc"
        android:layout_toEndOf="@+id/textView" />

</RelativeLayout>
